components/Form/Form.module.scss
@use "../../styles/mixins" as *;

.form {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  width: 100%;
}

.field {
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  width: 100%;
  align-items: flex-start;
}

.message {
  font-size: 0.75rem;
  font-weight: 500;
  margin-top: -0.25rem;
}

.error {
  color: var(--error);
  font-weight: 700;
  text-transform: uppercase;
  animation: shake 0.3s ease-in-out;
}

.description {
  color: var(--muted-foreground);
}

@keyframes shake {
  0%,
  100% {
    transform: translateX(0);
  }
  25% {
    transform: translateX(-4px);
  }
  75% {
    transform: translateX(4px);
  }
}

